--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "puppeteer": "^24.12.0"
   },
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "prod": "node app.js"
   }
 }
