--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "nodemon app.js",
-    "prod": "npm i && cd funeralls; npm i; npm run build && cd ..; node app.js"
+    "build": "npm i && cd funeralls; npm i; npm run build",
+    "prod": "node app.js"
   }
 }
