--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "puppeteer": "^24.12.0"
   },
   "scripts": {
+    "postinstall": "npx puppeteer browsers install chrome",
     "dev": "nodemon app.js",
-    "build": "npm i && cd funeralls && npm i && npm run build && cd ..&& npx puppeteer browsers install chrome",
+    "build": "npm i && cd funeralls && npm i && npm run build",
     "prod": "node app.js"
   }
 }
