--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "nodemon app.js",
-    "build": "npm i && cd funeralls && npm i && npm run build",
+    "build": "./render-build.sh",
     "prod": "node app.js"
   }
 }
